# esp-claw

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md
.agents/spec/: claw-skill-spec.md
.github/workflows/: build.yml  sync.yaml
.gitlab/ci/: build-doc.yml  build.yml  deploy.yml  merge_bin.py  package_firmware.py  rules.yml  simulator.yml  upload_firmware.py
application/edge_agent/: sdkconfig.defaults
application/edge_agent/boards/Nologo.Tech/xingzhi_395/: board_devices.yaml
application/edge_agent/boards/cloudzao/metalio_claw_4/: board_devices.yaml  board_info.yaml  board_peripherals.yaml  sdkconfig.defaults.board  setup_device.c
application/edge_agent/boards/espressif/esp32_S3_DevKitC_1_N16R8_breadboard/: board_devices.yaml  board_info.yaml
application/edge_agent/boards/espressif/esp32_S3_DevKitC_1_breadboard_N16R8/: board_devices.yaml  board_info.yaml
application/edge_agent/boards/espressif/esp32_p4_function_ev/: board_devices.yaml
application/edge_agent/boards/espressif/esp32_s31_korvo1/: board_devices.yaml
application/edge_agent/boards/lceda-course-examples/eda_ai_gamebox/: README.md  board_devices.yaml  board_info.yaml  board_peripherals.yaml  sdkconfig.defaults.board
application/edge_agent/boards/lceda-course-examples/eda_robot_pro/: README.md  board_devices.yaml  board_info.yaml  board_peripherals.yaml  sdkconfig.defaults.board
application/edge_agent/boards/lceda-course-examples/eda_super_bear/: README.md  board_devices.yaml  board_info.yaml  board_peripherals.yaml  sdkconfig.defaults.board
application/edge_agent/boards/lceda-course-examples/eda_tv_pro/: README.md  board_devices.yaml  board_info.yaml  board_peripherals.yaml  sdkconfig.defaults.board
application/edge_agent/boards/lilygo/lilygo_t_display_p4/: .clang-format  Kconfig.projbuild  README.md  README_CN.md  board_devices.yaml  board_info.yaml  board_peripherals.yaml  gen_bmgr_config_codes.py  sdkconfig.defaults.board  setup_device.cpp
application/edge_agent/boards/seeedstudio/xiao_esp32s3_sense/: README.md  board_devices.yaml  board_info.yaml  board_peripherals.yaml  sdkconfig.defaults.board
application/edge_agent/boards/waveshare/waveshare_esp32_s3_zero_n8r8/: board_devices.yaml  board_info.yaml  board_peripherals.yaml  sdkconfig.defaults.board  setup_device.c
application/edge_agent/components/app_config/: app_config.c
application/edge_agent/components/app_config/include/: app_config.h
application/edge_agent/components/http_server/: http_server_config_api.c
application/edge_agent/fatfs_image/storage/skills/weather_search/: SKILL.md
application/edge_agent/main/: idf_component.yml  main.c
application/mcp_server_point/: sdkconfig.defaults
components/claw_capabilities/cap_http_request/src/: cap_http_request.c
components/claw_capabilities/cap_im_platform/src/: cap_im_feishu.c  cap_im_qq.c  cap_im_tg.c  cap_im_wechat.c
components/claw_capabilities/cap_mcp_server/src/: cap_mcp_server.c
components/claw_capabilities/cap_system/src/: cap_system.c
components/claw_modules/claw_cap/include/: claw_cap.h
components/claw_modules/claw_cap/src/: claw_cap.c
components/claw_modules/claw_core/: CMakeLists.txt
components/claw_modules/claw_core/include/: claw_core.h
components/claw_modules/claw_core/src/: claw_core.c  claw_core_agent_loop.c  claw_core_context.c  claw_core_context_persist.c  claw_core_events.c  claw_core_internal.h  claw_core_llm.c  claw_core_messages.c  claw_core_utils.c
components/claw_modules/claw_core/src/llm/: claw_llm_http_transport.c  claw_llm_runtime.c  claw_llm_types.h
components/claw_modules/claw_core/src/llm/backends/: claw_llm_backend_anthropic.c  (+1 more)
components/claw_modules/claw_event_router/src/: claw_event_router.c
components/claw_modules/claw_manager/include/: claw_agent_mgr.h
components/claw_modules/claw_manager/src/: claw_agent_mgr.c
components/claw_modules/claw_memory/include/: claw_memory.h
components/claw_modules/claw_memory/src/: claw_memory_session.c
components/common/app_claw/: Kconfig  app_capabilities.c  app_claw.c  app_claw_cli.c  app_lua_modules.c  idf_component.yml
components/common/app_claw/include/: app_claw.h
components/common/emote/: Kconfig  emote.c  idf_component.yml
components/common/settings/: settings_store.c
components/common/settings/include/: settings_store.h
components/common/skill_builder/skills/skills_lab_downloader/: SKILL.md
components/lua_modules/lua_module_ble_hid/src/: lua_module_ble_hid.c
components/lua_modules/lua_module_camera/: README.md
components/lua_modules/lua_module_camera/src/: camera_hal.c  camera_hal.h  lua_module_camera.c
components/lua_modules/lua_module_event_publisher/src/: lua_module_event_publisher.c
components/lua_modules/lua_module_ledc/: CMakeLists.txt  README.md
components/lua_modules/lua_module_ledc/src/: lua_module_ledc.c  lua_module_ledc.h
components/lua_modules/lua_module_lvgl/src/: lua_lvgl_core_widgets.c  lua_lvgl_events.c  lua_lvgl_font.c  lua_lvgl_private.h  lua_lvgl_runtime.c  lua_lvgl_value.c
docs/: astro.config.mjs  package.json  pnpm-lock.yaml
docs/src/: env.d.ts
docs/src/flash-tool/: firmware-meta.json  firmware.json  flash-page.ts  i18n.ts
docs/src/layouts/: SiteShell.astro
docs/src/pages/[lang]/: flash.astro
docs/src/plugins/: satteri-doc-links.ts
docs/tools/: generate-firmware-json.ts
pages/simulator/: README.md  index.html  package.json  pnpm-lock.yaml
pages/simulator/scripts/: copy-runtime.mjs
pages/simulator/src/: main.ts  params.ts  repo-provider.ts  runtime-host.ts  skill-loader.ts  skill-parser.ts  style.css  types.ts
tools/lua_lvgl_web_sim/: CMakeLists.txt  README.md  esp_claw_shell.html  lv_conf.h
tools/lua_lvgl_web_sim/sim/: esp_claw_sim.c  lvgl_web_shim.lua  sim_esp_compat.c
tools/lua_lvgl_web_sim/sim/compat/: cap_lua.h  display_arbiter.h  esp_check.h  esp_err.h  esp_heap_caps.h  esp_lcd_panel_io.h  esp_lcd_panel_ops.h  esp_lcd_touch.h  esp_log.h  esp_timer.h
tools/lua_lvgl_web_sim/sim/compat/freertos/: FreeRTOS.h  semphr.h  task.h
tools/lua_lvgl_web_sim/tools/: start_esp_claw_sim.ps1  stream_proxy.mjs
(+30 files in other folders)
